On the new-seller-form.ejs, the required attribute of the seller type radio buttons are no longer set. This is because the default pop-up bubble that appears if the seller type is not selected, points to one of the buttons which might make the user think that that is the option to choose. Instead, an alert has been created which is triggered in the new-seller-form.js script when the user attempts to submit the form. Also, the phones alert no longer spans only the column in which the telephone and cellphone controls are, but the whole Contact Information row.

--- a/views/new-seller-form.ejs
+++ b/views/new-seller-form.ejs
@@ -50,7 +50,10 @@ var controlClass = 'control-group error';
 
     <fieldset>
         <legend>Contact information</legend>
-
+        <div id="phonesAlert" class="alert alert-error" style="display: none;">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            Please supply either a telephone or a cellphone number, or both.
+        </div>
         <div class="row">
             <div class="span6">
                 <div class="control-group">
@@ -71,11 +74,6 @@ var controlClass = 'control-group error';
             </div>
 
             <div class="span6">
-                <div id="phones" class="alert alert-info" style="display: none;">
-                    <button type="button" class="close" data-dismiss="alert">&times;</button>
-                    Please supply either a telephone or a cellphone number, or both.
-                </div>
-
                 <div id="divTelephone" class="control-group">
                     <label class="control-label" for="telephone">Telephone</label>
                     <div class="controls">
@@ -97,15 +95,19 @@ var controlClass = 'control-group error';
 
     <fieldset>
         <legend>Seller type</legend>
+        <div id="sellerTypeAlert" class="alert alert-error" style="display: none;">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            Please specify which type of seller you are by clicking either the Private seller option button or the Dealership option button.
+        </div>
         <div class="row">
             <div class="span3">
                 <label class="radio">
-                    <input type="radio" id="privateSeller" name="sellerType" value="privateSeller" required="required" />Private seller
+                    <input type="radio" id="privateSeller" name="sellerType" value="privateSeller" />Private seller
                 </label>
             </div>
             <div class="span3">
                 <label class="radio">
-                    <input type="radio" id="dealership"  name="sellerType" value="dealership" required="required"/>Dealership
+                    <input type="radio" id="dealership"  name="sellerType" value="dealership" />Dealership
                 </label>
             </div>
         </div>
