--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,43 +1,57 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Boot and Bonnet</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link href="public/stylesheets/bootstrap.css" rel="stylesheet" />
-        <style>
-            body {
-                padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-            }
-        </style>
-        <%-scripts%>
+	<title>Boot and Bonnet</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link href="public/css/bootstrap.css" rel="stylesheet" />
+	<style>
+	    body {
+		padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+	    }
+	</style>
     </head>
     <body>
-
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="navbar-inner">
-                <div class="container">
-                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </a>
-                    <a class="brand" href="#">Boot and Bonnet</a>
-                    <div class="nav-collapse collapse">
-                        <ul class="nav">
-                            <li class="active"><a href="/">Home</a></li>
-                            <li><a href="#buy">Buy</a></li>
-                            <li><a href="#sell">Sell</a></li>
-                            <li><a href="#login">Login</a></li>
-                            <li><a href="/new-seller-form">Register</a></li>
-                        </ul>
-                    </div><!--/.nav-collapse -->
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <%-body -%>
-        </div>
-        <script src="public/javascripts/bootstrap.js"></script>
-
+	<div class="navbar navbar-fixed-top">
+	    <div class="navbar-inner">
+		<div class="container">
+		    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		    </a>
+		    <a class="brand" href="#">Boot&Bonnet</a>
+		    <div class="nav-collapse collapse">
+			<ul class="nav nav-pills">
+			    <li><a href="/">Home</a></li>
+			    <li><a href="#buy">Buy</a></li>
+			    <li><a href="#sell">Sell</a></li>
+			</ul>
+			<ul class="nav nav-pills pull-right">
+			    <% if (loggedIn) { %>
+			    <li class="dropdown">
+				<a class="dropdown-toggle" data-toggle="dropdown" 
+				   href="#">
+				    My Account
+				    <b class="caret"></b>
+				</a>
+				<ul class="dropdown-menu">
+				    <li><a href="/?logout=true">Log out</a></li>
+				</ul>
+			    </li>
+			    <% } else { %>
+			    <li><a href="#login">Login</a></li>
+			    <li><a href="/new-seller">Register</a></li>
+			    <% } %>
+			</ul>
+		    </div><!--/.nav-collapse -->
+		</div>
+	    </div>
+	</div>
+	<div class="container">
+	    <%-body -%>
+	</div>
+	<%-scripts%>
+	<script src="public/js/jquery-1.9.1.min.js"></script>
+	<script src="public/js/bootstrap.min.js"></script>
     </body>
 </html>
