--- a/views/seller-form.ejs
+++ b/views/seller-form.ejs
@@ -1,8 +1,10 @@
+ <!--For registering new sellers and editing the information of existing sellers.-->
+
 <% layout('layout') -%>
-<% script('public/javascripts/new-seller-form.js') -%>
+<% script('public/js/seller-form.js') -%>
 
 <%
-var locations = JSON.stringify(locations);
+var locationsString = JSON.stringify(locations);
 if (emailError === '') {
 var controlClass = 'control-group';
 }
@@ -11,7 +13,7 @@ var controlClass = 'control-group error';
 }
 %>
 
-<form id="register" method="post" action="/private-seller">
+<form id="register" method="post" action="/seller">
 
     <h2>New Seller</h2>
 
@@ -23,7 +25,7 @@ var controlClass = 'control-group error';
                 <div class="<%=controlClass%>">
                     <label class="control-label" for="email">Email address</label>
                     <div class="controls">
-                        <input type="email" id="email" name="email" required="required"/>
+                        <input type="email" id="email" name="email" value="<%=email%>" required="required"/>
                         <span class="help-inline"><%=emailError%></span>
                     </div>
                 </div>
@@ -98,7 +100,8 @@ var controlClass = 'control-group error';
         <legend>Seller type</legend>
         <div id="sellerTypeAlert" class="alert alert-error" style="display: none;">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
-            Please specify which type of seller you are by clicking either the Private seller option button or the Dealership option button.
+            Please specify which type of seller you are by clicking either the Private seller option button or the 
+            Dealership option button.
         </div>
         <div class="row">
             <div class="span3">
@@ -116,21 +119,28 @@ var controlClass = 'control-group error';
 
     <fieldset id="dealershipDetails" style="display: none;">
         <legend>Dealership details</legend>
+        <div id="locationAlert" class="alert alert-error" style="display: none;">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            Please specify the province and town.
+        </div>
         <div class="row">
             <div class="span6">
 
                 <div class="control-group">
                     <label class="control-label" for="dealershipName">Name</label>
                     <div class="controls">
-                        <input type="text" id="dealershipName" name="dealershipName" required="required" />
+                        <input type="text" id="dealershipName" name="dealershipName" 
+                               value="<%=dealershipName%>" />
                     </div>
                 </div>
 
                 <div class="control-group">
                     <label class="control-label" for="streetAddress1">Street address</label>
                     <div class="controls">
-                        <input type="text" id="streetAddress1" name="streetAddress1" required="required" /><br />
-                        <input type="text" id="streetAddress2" name="streetAddress2" required="required" />
+                        <input type="text" id="streetAddress1" name="streetAddress1" 
+                               value="<%=streetAddress1%>" /><br />
+                        <input type="text" id="streetAddress2" name="streetAddress2" 
+                               value="<%=streetAddress2%>" />
                     </div>
                 </div>
             </div>
@@ -138,18 +148,24 @@ var controlClass = 'control-group error';
             <div class="span6">
                 <input type="hidden" id="locations" value="<%=locations%>" />
                 <label>Province</label>
-                <select id="provinces" >
+                <select id="provinces" name="province">
+                    <% if (province) { %>
+                    <option selected="selected"><%=province%></option>
+                    <% } %>
                     <option>Please select ...</option>
-                    <% for (p in provinces) { %>
-                    <option><%=provinces[p]%></option>
+                    <% for (p in locations) { %>
+                    <option><%=locations[p].name%></option>
                     <% } %>
                 </select>
 
                 <label>Town</label>
-                <select id="towns" >
+                <select id="towns" name="town">
+                    <% if (town) { %>
+                    <option selected="selected"><%=town%></option>
+                    <% } %>
                     <option>Please select ...</option>
                 </select>
-                <input type="hidden" id="townId" name="townId" />
+                <input type="hidden" id="townId" name="townId" value="<%=townId%>"/>
 
             </div>
         </div>
