--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,7 @@
     <head>
 	<title>Boot and Bonnet</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link href="public/css/bootstrap.css" rel="stylesheet" />
+	<link href="../assets/css/bootstrap.css" rel="stylesheet" />
 	<style>
 	    body {
 		padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -19,7 +19,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		    </a>
-		    <a class="brand" href="#">Boot&Bonnet</a>
+		    <a class="brand" href="/">Boot&Bonnet</a>
 		    <div class="nav-collapse collapse">
 			<ul class="nav nav-pills">
 			    <li><a href="/">Home</a></li>
@@ -35,12 +35,14 @@
 				    <b class="caret"></b>
 				</a>
 				<ul class="dropdown-menu">
+				    <li><a href="/seller">View profile</a></li>
+                                    <li class="divider"></li>
 				    <li><a href="/?logout=true">Log out</a></li>
 				</ul>
 			    </li>
 			    <% } else { %>
 			    <li><a href="#login">Login</a></li>
-			    <li><a href="/new-seller">Register</a></li>
+			    <li><a href="/seller/new">Register</a></li>
 			    <% } %>
 			</ul>
 		    </div><!--/.nav-collapse -->
@@ -51,7 +53,7 @@
 	    <%-body -%>
 	</div>
 	<%-scripts%>
-	<script src="public/js/jquery-1.9.1.min.js"></script>
-	<script src="public/js/bootstrap.min.js"></script>
+	<script src="../assets/js/jquery-1.9.1.min.js"></script>
+	<script src="../assets/js/bootstrap.min.js"></script>
     </body>
 </html>
