A seller can now log in and log out again. The code has been reformatted so that the code that contacts the database does that only, and does not handle the views. Separate modules, in the components/sellers/routes folder have been created for that. The code that connects with the database are now in models folders.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -35,14 +35,14 @@
 				    <b class="caret"></b>
 				</a>
 				<ul class="dropdown-menu">
-				    <li><a href="/seller">View profile</a></li>
+				    <li><a href="/seller/view">View profile</a></li>
                                     <li class="divider"></li>
 				    <li><a href="/?logout=true">Log out</a></li>
 				</ul>
 			    </li>
 			    <% } else { %>
-			    <li><a href="#login">Login</a></li>
-			    <li><a href="/seller/new">Register</a></li>
+			    <li><a href="/seller/login">Login</a></li>
+			    <li><a href="/seller/add">Register</a></li>
 			    <% } %>
 			</ul>
 		    </div><!--/.nav-collapse -->
