--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,7 @@
     <head>
 	<title>Boot and Bonnet</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link href="../assets/css/bootstrap.css" rel="stylesheet" />
+	<link href="/assets/css/bootstrap.css" rel="stylesheet" />
 	<style>
 	    body {
 		padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -29,7 +29,7 @@
 			<ul class="nav nav-pills pull-right">
 			    <% if (loggedIn) { %>
 			    <li class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" 
+				<a class="dropdown-toggle" data-toggle="dropdown"
 				   href="#">
 				    My Account
 				    <b class="caret"></b>
@@ -53,7 +53,7 @@
 	    <%-body -%>
 	</div>
 	<%-scripts%>
-	<script src="../assets/js/jquery-1.9.1.min.js"></script>
-	<script src="../assets/js/bootstrap.min.js"></script>
+	<script src="/assets/js/jquery-1.9.1.min.js"></script>
+	<script src="/assets/js/bootstrap.min.js"></script>
     </body>
 </html>
