--- a/components/sellers/views/profile.ejs
+++ b/components/sellers/views/profile.ejs
@@ -2,52 +2,53 @@
 
 <%
 if (sellerType === 'dealership') {
-var dlrDisplay = '';
-var psDisplay = 'none';
+	var dlrDisplay = '';
+	var psDisplay = 'none';
 } else {
-var dlrDisplay = 'none';
-var psDisplay = '';
+	var dlrDisplay = 'none';
+	var psDisplay = '';
 }
 %>
 
-<h2>My Account</h2>
+<h2>My Profile</h2>
 
 <form method="post" action="/seller/view">
-	<input type="hidden" name="_method" value="<%=method%>"/>
-    <fieldset id="dealership" style="display: <%=dlrDisplay%>">
-		<p><i class="icon-briefcase"></i>&nbsp;<strong><%=dealershipName%></strong></p>
+	<input type="hidden" name="_method" value="<%= method %>"/>
+    <fieldset id="dealership" style="display: <%= dlrDisplay %>">
+		<p><i class="icon-briefcase"></i>&nbsp;<strong><%= dealershipName %></strong></p>
 		<div class="row">
 			<div class="span4">
-				<p><i class="icon-road"></i>&nbsp;<%=streetAddress1%></p>
-				<p><i class="icon-road"></i>&nbsp;<%=streetAddress2%></p>
-				<p><i class="icon-map-marker"></i>&nbsp;<%=town%></p>
-				<p><i class="icon-map-marker"></i>&nbsp;<%=province%></p>
+				<p><i class="icon-road"></i>&nbsp;<%= streetAddress1 %></p>
+				<p><i class="icon-road"></i>&nbsp;<%= streetAddress2 %></p>
+				<p><i class="icon-map-marker"></i>&nbsp;<%= town %></p>
+				<p><i class="icon-map-marker"></i>&nbsp;<%= province %></p>
 			</div>
 			<div class="span4">
 				<div class="span6">
-					<p><i class="icon-user"></i>&nbsp;<%=fullname%></p>
-					<p><i class="icon-envelope"></i>&nbsp;<%=email%></p>
-					<p><i class="icon-home"></i>&nbsp;<%=telephone%></p>
-					<p><i class="icon-signal"></i>&nbsp;<%=cellphone%></p>
+					<p><i class="icon-user"></i>&nbsp; <%= fullname %></p>
+					<p><i class="icon-envelope"></i>&nbsp; <%= email %></p>
+					<p><i class="icon-home"></i>&nbsp; <%= telephone %></p>
+					<p><i class="icon-signal"></i>&nbsp; <%= cellphone %></p>
 				</div>
 
 			</div>
 		</div>
     </fieldset>
-    <fieldset id="privateSeller" style="display: <%=psDisplay%>">
+    <fieldset id="privateSeller" style="display: <%= psDisplay %>">
 		<div class="row">
 			<div class="span4">
-				<p><i class="icon-user"></i>&nbsp;<%=fullname%></p>
-				<p><i class="icon-envelope"></i>&nbsp;<%=email%></p>
+				<p><i class="icon-user"></i>&nbsp; <%= fullname %></p>
+				<p><i class="icon-envelope"></i>&nbsp; <%= email %></p>
 			</div>
 			<div class="span4">
-				<p><i class="icon-home"></i>&nbsp;<%=telephone%></p>
-				<p><i class="icon-signal"></i>&nbsp;<%=cellphone%></p>
+				<p><i class="icon-home"></i>&nbsp; <%= telephone %></p>
+				<p><i class="icon-signal"></i>&nbsp; <%= cellphone %></p>
 			</div>
 		</div>
     </fieldset>
     <div class="form-actions">
 		<a href="/seller/edit" class="btn">Edit</a>
 		<button class="btn btn-link">Delete</button>
+		<a href="/vehicle/add" class="btn btn-primary pull-right">Advertise a Vehicle</a>
     </div>
 </form>
