--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,7 +10,7 @@
 		padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
 	    }
 	</style>
-    </head>
+	</head>
     <body>
 	<div class="navbar navbar-fixed-top">
 	    <div class="navbar-inner">
@@ -36,8 +36,9 @@
 				    <b class="caret"></b>
 				</a>
 				<ul class="dropdown-menu">
-				    <li><a href="/seller/view">View profile</a></li>
-                                    <li class="divider"></li>
+				    <li><a href="/seller/view">Profile</a></li>
+				    <li><a href="/seller/vehicles">Vehicles</a></li>
+					<li class="divider"></li>
 				    <li><a href="/?logout=true">Log out</a></li>
 				</ul>
 			    </li>
