Users and private sellers can now be written to the MongoDB database. Not yet dealerships.

--- a/components/sellers/views/register.ejs
+++ b/components/sellers/views/register.ejs
@@ -10,7 +10,7 @@ var controlClass = 'control-group error';
 }
 %>
 
-<form id="register" method="post" action="/seller/view">
+<form id="register" method="post" action="/seller/add">
     <h2><%=heading %></h2>
 
     <fieldset>
