--- a/components/sellers/views/password-forgotten-form.ejs
+++ b/components/sellers/views/password-forgotten-form.ejs
@@ -1,14 +1,10 @@
 <% layout('../../../views/layout') -%>
 
 <%
-if (emailError === '') {
-var emailAlertType = '';
-} else {
-var emailAlertType = 'error';
-}
+var emailAlertType = emailError === '' ? '' : 'error';
 %>
 
-<form method="post" action="/seller/login/password/forgot">
+<form method="post" action="/seller/password/forgot">
 	<fieldset>
 		<legend>Forgotten Password</legend>
 
@@ -21,7 +17,8 @@ var emailAlertType = 'error';
 		<div class="control-group <%=emailAlertType%>">
 			<label class="control-label">Email</label>
 			<div class="controls">
-				<input type="email" name="seller[email]" value="<%=email%>" required="required" />
+				<input type="email" name="seller[emailAddress]" value="<%=emailAddress%>"
+						required="required" />
 				<span class="help-block"><%=emailError%></span>
 			</div>
 		</div>
