--- a/components/sellers/views/password-reset-form.ejs
+++ b/components/sellers/views/password-reset-form.ejs
@@ -1,8 +1,8 @@
 <% layout('../../../views/layout') -%>
 <% script('/assets/js/reset-password.js') -%>
 
-<form id="reset" method="post" action="/seller/login/password/reset">
-	<input type="hidden" name="seller[email]" value="<%=email %>" />
+<form id="reset" method="post" action="/seller/password/reset">
+	<input type="hidden" name="seller[emailAddress]" value="<%=emailAddress %>" />
 	<fieldset>
 		<legend>Password Reset</legend>
 
@@ -22,7 +22,8 @@
 		<div id="divConfirmPassword" class="control-group">
 			<label class="control-label">Confirm Password</label>
 			<div class="controls">
-				<input type="password" id="confirmPassword" name="seller[confirmPassword]" required="required" />
+				<input type="password" id="confirmPassword" name="seller[confirmPassword]"
+						required="required" />
 				<span id="spanConfirmPassword" class="help-block"></span>
 			</div>
 		</div>
