--- a/components/sellers/views/profile-page.ejs
+++ b/components/sellers/views/profile-page.ejs
@@ -38,6 +38,8 @@ if (sellerType === 'dealership') {
 			<div class="span4">
 				<p><i class="icon-user"></i>&nbsp; <%= fullname %></p>
 				<p><i class="icon-envelope"></i>&nbsp; <%= email %></p>
+				<p><i class="icon-map-marker"></i>&nbsp;<%= town %></p>
+				<p><i class="icon-map-marker"></i>&nbsp;<%= province %></p>
 			</div>
 			<div class="span4">
 				<p><i class="icon-home"></i>&nbsp; <%= telephone %></p>
