--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,6 @@
 <% layout('layout') -%>
-<% script('/assets/js/home.js') -%>
+<% script('/static/js/home.js') -%>
 
-<h1 class="">Welcome</h1>
+<div class="page-header">
+	<h1 class="">Welcome</h1>
+</div>
