--- a/components/vehicles/views/registration-form.ejs
+++ b/components/vehicles/views/registration-form.ejs
@@ -1,5 +1,5 @@
 <% layout('../../../views/layout') -%>
-<% script('/components/vehicles/assets/js/register.js') -%>
+<% script('../static/js/registration-form-vehicle.js') -%>
 
 <%
 var manufacturersString = JSON.stringify(makes);
@@ -8,190 +8,351 @@ var thisYear = currentDateObject.getFullYear();
 %>
 
 <form method="post" action="/vehicle/add" enctype="multipart/form-data">
-
-	<h2>New Vehicle</h2>
-
-	<fieldset>
-		<legend>Type</legend>
-
-		<input type="hidden" id="manufacturers" 
-				value="<%=manufacturersString %>" />
-
-		<label>Make:</label>
-		<select id="makes" name="vehicle[make]">
-			<option>Please select ...</option>
-		<% for (m in makes) { %>
-			<option><%=makes[m].name %></option>
-		<% } %>
-		</select>
-
-		<label>Model:</label>
-		<select id="models" name="vehicle[model]">
-			<option>Please select ...</option>
-		</select>
-		<input type="hidden" id="modelId" name="vehicle[modelId]" value=""/>
-
-		<label>Year:</label>
-		<select id="year" name="vehicle[year]">
-			<option selected="selected">Please select...</option>
-		<% for (var year = thisYear; year != 1900; year--) { %>
-			<option value="<%=year%>"><%=year %></option>
-		<% } %>
-		</select>
-	</fieldset>
-
-	<fieldset>
-
-		<legend>Description</legend>
-
-		<div class="input-append">
-			<label>Mileage:</label>
-			<input class="span2" id="mileage" type="text" 
-					name="vehicle[mileage]" />
-			<span class="add-on">km</span>
+	<div class="page-header">
+		<h1>New Vehicle</h1>
+	</div>
+	
+	<div class="row">
+		<div class="span6">
+			<fieldset>
+				<legend>Type</legend>
+				
+				<input type="hidden" id="manufacturers" value="<%=manufacturersString %>" />
+				
+				<label>Make:</label>
+				
+				<select id="makes" name="vehicle[type][make]">
+					<option>Please select ...</option>
+					
+				<% for (m in makes) { %>
+					<option><%=makes[m].name %></option>
+				<% } %>
+				
+				</select>
+				
+				<label>Model:</label>
+				
+				<select id="models" name="vehicle[type][model]">
+					<option>Please select ...</option>
+				</select>
+				
+				<label>Year:</label>
+				
+				<select id="year" name="vehicle[type][year]">
+					<option selected="selected">Please select...</option>
+					
+				<% for (var year = thisYear; year >= 1886; year--) { %>
+					<option value="<%=year%>"><%=year %></option>
+				<% } %>
+				
+				</select>
+			</fieldset>
 		</div>
+		
+		<div class="span6">
+			<fieldset>
+				<legend>Description</legend>
+				
+				<div class="input-append">
+					<label>Mileage:</label>
+					
+					<input id="mileage" type="text" name="vehicle[description][mileage]" />
+							
+					<span class="add-on">km</span>
+				</div>
+				
+				<label for="color">Colour:</label>
+				
+				<select id="color" name="vehicle[description][color]">
+					<option selected="selected">Please select...</option>
+					
+				<% for (var i = 0; i < colors.length; i++) { %>
+					<option value="<%=colors[i]%>"><%=colors[i]%></option>
+				<% } %>
+				
+				</select>
+			
+				<br /><br />
+			
+				<span>Full service history:</span>
+				
+				<span class="btn-group" data-toggle="buttons-radio">
+					<button type="button" class="btn btn-small"
+							onclick="$('#fullServiceHistory').val('Yes');">Yes</button>
+					<button type="button" class="btn btn-small"
+							onclick="$('#fullServiceHistory').val('No');">No</button>
+				</span>
+				
+				<input type="hidden" id="fullServiceHistory" 
+						name="vehicle[description][fullServiceHistory]" />
+			</fieldset>
+		</div>	
+	</div>
+	
+	<div class="row">
+		<div class="span6">
+			<fieldset>
+				<legend>Mechanics</legend>
 
-		<div class="input-prepend input-append">
-			<label>Price:</label>
-			<span class="add-on">R</span>
-			<input class="span2" id="price" type="text" 
-					name="vehicle[price]" />
-			<span class="add-on">.00</span>
+				<div class="input-append">
+					<label>Engine Capacity:</label>
+					<input class="span3" type="text" id="engineCapacity" 
+							name="vehicle[mechanics][engineCapacity]" />
+					<span class="add-on">L</span>
+				</div>
+				
+				<label>Fuel Type:</label>
+				
+				<select id="fuelTypes" name="vehicle[mechanics][fuel]">
+					<option selected="selected">Please select...</option>
+					
+				<% for (var i = 0; i < fuels.length; i++) { %>
+					<option value="<%=fuels[i]%>"><%=fuels[i]%></option>
+				<% } %>
+				
+				</select>
+
+				<label>Transmission Type:</label>
+				
+				<select id="transmissionTypes" name="vehicle[mechanics][transmission]">
+					<option selected="selected">Please select...</option>
+					
+				<% for (var i = 0; i < transmissions.length; i++) { %>
+					<option value="<%=transmissions[i]%>"><%=transmissions[i]%></option>
+				<% } %>
+				
+				</select>
+				
+				<br />
+				
+				<span>ABS Brakes:</span>
+				
+				<span class="btn-group" data-toggle="buttons-radio">
+					<button type="button" class="btn btn-small"
+							onclick="$('#absBrakes').val('Yes');">Yes</button>
+					<button type="button" class="btn btn-small"
+							onclick="$('#absBrakes').val('No');">No</button>
+				</span>
+				
+				<input type="hidden" id="absBrakes" name="vehicle[mechanics][absBrakes]" />
+				
+				<br /><br />
+
+				<span>Power Steering:</span>
+				
+				<span class="btn-group" data-toggle="buttons-radio">
+					<button type="button" class="btn btn-small"
+							onclick="$('#powerSteering').val('Yes');">Yes</button>
+					<button type="button" class="btn btn-small"
+							onclick="$('#powerSteering').val('No');">No</button>
+				</span>
+				
+				<input type="hidden" id="powerSteering" 
+						name="vehicle[mechanics][powerSteering]" />
+			</fieldset>
 		</div>
+		
+		<div class="span6">
+			<fieldset>
+				<legend>Luxuries</legend>
 
-		<label for="colour">Colour:</label>
-		<select id="colour" name="vehicle[color]">
-			<option selected="selected">Please select...</option>
-		<% for (c in colours) { %>
-			<option value="<%=colours[c] %>"><%=colours[c] %></option>
-		<% } %>
-		</select>
-
-		<label>Comments:</label>
-		<textarea cols="1" rows="5" id="comments" name="vehicle[comments]">
-		</textarea>
-
-	</fieldset>
-
-	<fieldset>
-
-		<legend>Luxuries</legend>
-
-		<label>Electrical Windows:</label>
-		<select id="electricalWindows" name="vehicle[electricalWindows]">
-			<option value="none">None</option>
-			<option value="frontOnly">Front Only</option>
-			<option value="frontAndBack">Front and Back</option>
-		</select><br />
-
-		<label class="checkbox">
-			<input type="checkbox" id="airConditioning" name="vehicle[airConditioning]" />
-			Air Conditioning
-		</label>
-
-		<label class="checkbox">
-			<input type="checkbox" id="cdPlayer" name="vehicle[cdPlayer]" />
-			CD Player
-		</label>
-
-		<label class="checkbox">
-			<input type="checkbox" id="radio" name="vehicle[radio]" />
-			Radio
-		</label>
-	</fieldset>
-
-	<fieldset>
-		<legend>Security</legend>
-
-		<label class="checkbox">
-			<input type="checkbox" id="alarm" name="vehicle[alarm]" />
-			Alarm
-		</label>
-
-		<label class="checkbox">
-			<input type="checkbox" id="centralLocking" name="vehicle[centralLocking]" />
-			Central Locking
-		</label>
-
-		<label class="checkbox">
-			<input type="checkbox" id="immobilizer" name="vehicle[immobilizer]" />
-			Immobilizer
-		</label>
-
-		<label class="checkbox">
-			<input type="checkbox" id="gearLock" name="vehicle[gearLock]" />
-			Gear Lock
-		</label>
-	</fieldset>
-
-	<fieldset>
-		<legend>Safety</legend>
-			<label>Air Bags:</label>
-			<select id="airBags" name="airBags">
-				<option value=0>0</option>
-				<option value=1>1</option>
-				<option value=2>2</option>
-				<option value=3>3</option>
-				<option value=4>4</option>
-			</select>
-	</fieldset>
-
-	<fieldset>
-		<legend>Mechanics</legend>
-
-		<label class="checkbox">
-			<input type="checkbox" id="absBrakes" name="vehicle[absBrakes]" />
-			ABS Brakes
-		</label>
-
-		<label class="checkbox">
-			<input type="checkbox" id="powerSteering" name="vehicle[powerSteering]" />
-			Power Steering
-		</label>
-
-		<div class="input-append">
-			<label>Engine Capacity:</label>
-			<input class="span3" type="text" id="engineCapacity" 
-					name="vehicle[engineCapacity]" />
-			<span class="add-on">L</span>
+				<label>Electrical Windows:</label>
+				
+				<select id="electricalWindows" name="vehicle[luxuries][electricalWindows]">
+					<option value="none">None</option>
+					<option value="frontOnly">Front Only</option>
+					<option value="frontAndBack">Front and Back</option>
+				</select>
+				
+				<br />
+				
+				<span>Air Conditiong:</span>
+				
+				<span class="btn-group" data-toggle="buttons-radio">
+					<button type="button" class="btn btn-small"
+							onclick="$('#airConditioning').val('Yes');">Yes</button>
+					<button type="button" class="btn btn-small"
+							onclick="$('#airConditioning').val('No');">No</button>
+				</span>
+				
+				<input type="hidden" id="airConditioning" 
+						name="vehicle[luxuries][airConditioning]" />
+				
+				<br /><br />
+						
+				<span>CD Player:</span>
+						
+				<span class="btn-group" data-toggle="buttons-radio">
+					<button type="button" class="btn btn-small"
+							onclick="$('#cdPlayer').val('Yes');">Yes</button>
+					<button type="button" class="btn btn-small"
+							onclick="$('#cdPlayer').val('No');">No</button>
+				</span>
+				
+				<input type="hidden" id="cdPlayer" 
+						name="vehicle[luxuries][cdPlayer]" />
+				
+				<br /><br />
+				
+				<span>Radio:</span>
+				
+				<span class="btn-group" data-toggle="buttons-radio">
+					<button type="button" class="btn btn-small"
+							onclick="$('#radio').val('Yes');">Yes</button>
+					<button type="button" class="btn btn-small"
+							onclick="$('#radio').val('No');">No</button>
+				</span>
+				
+				<input type="hidden" id="radio" 
+						name="vehicle[luxuries][radio]" />
+			</fieldset>
 		</div>
+	</div>
 
-		<label>Fuel Type:</label>
-		<select id="fuelTypes" name="vehicle[fuelType]">
-			<option selected="selected">Please select...</option>
-		<% for (f in fuels) { %>
-			<option value="<%=fuels[f] %>"><%=fuels[f] %></option>
-		<% } %>
-		</select>
+	<div class="row">
+		<div class="span6">
+			<fieldset>
+				<legend>Security</legend>
 
-		<label>Transmission Type:</label>
-		<select id="transmissionTypes" name="vehicle[transmissionType]">
-			<option selected="selected">Please select...</option>
-		<% for (t in transmissions) { %>
-			<option value="<%=transmissions[t] %>"><%=transmissions[t] %></option>
-		<% } %>
-		</select>
-	</fieldset>
+				<span>Alarm:</span>
+				
+				<span class="btn-group" data-toggle="buttons-radio">
+					<button type="button" class="btn btn-small"
+							onclick="$('#alarm').val('Yes');">Yes</button>
+					<button type="button" class="btn btn-small"
+							onclick="$('#alarm').val('No');">No</button>
+				</span>
+				
+				<input type="hidden" id="alarm" 
+						name="vehicle[security][alarm]" />
+				
+				<br /><br />
+				
+				<span>Central Locking:</span>
+				
+				<span class="btn-group" data-toggle="buttons-radio">
+					<button type="button" class="btn btn-small"
+							onclick="$('#centralLocking').val('Yes');">Yes</button>
+					<button type="button" class="btn btn-small"
+							onclick="$('#centralLocking').val('No');">No</button>
+				</span>
+				
+				<input type="hidden" id="alarm" 
+						name="vehicle[security][centralLocking]" />
+				
+				<br /><br />
+				
+				<span>Immobilizer:</span>
+				
+				<span class="btn-group" data-toggle="buttons-radio">
+					<button type="button" class="btn btn-small"
+							onclick="$('#immobilizer').val('Yes');">Yes</button>
+					<button type="button" class="btn btn-small"
+							onclick="$('#immobilizer').val('No');">No</button>
+				</span>
+				
+				<input type="hidden" id="immobilizer" 
+						name="vehicle[security][immobilizer]" />
+				
+				<br /><br />
+				
+				<span>Gear Lock:</span>
+				
+				<span class="btn-group" data-toggle="buttons-radio">
+					<button type="button" class="btn btn-small"
+							onclick="$('#gearLock').val('Yes');">Yes</button>
+					<button type="button" class="btn btn-small"
+							onclick="$('#gearLock').val('No');">No</button>
+				</span>
+				
+				<input type="hidden" id="gearLock" 
+						name="vehicle[security][gearLock]" />
+			</fieldset>
+		</div>
+		
+		<div class="span6">
+			<fieldset>
+				<legend>Safety</legend>
+				
+					<label>Air Bags:</label>
+					
+					<select id="airBags" name="vehicle[safety][airBags]">
+						<option value=0>0</option>
+						<option value=1>1</option>
+						<option value=2>2</option>
+						<option value=3>3</option>
+						<option value=4>4</option>
+					</select>
+			</fieldset>
+		</div>
+	</div>
 
 	<fieldset id="photos">
 		<legend>Photos</legend>
+		
+		<div class="row">
+			<div class="span6">
+				<label>Photo 1:</label>
+				<input type="file" name="photo1" />
 
-		<label>Photo 1:</label>
-		<input type="file" name="photo1" />
+				<label>Photo 2:</label>
+				<input type="file" name="photo2" />
+			</div>
+			
+			<div class="span6">
+				<label>Photo 3:</label>
+				<input type="file" name="photo3" />
 
-		<label>Photo 2:</label>
-		<input type="file" name="photo2" />
-
-		<label>Photo 3:</label>
-		<input type="file" name="photo3" />
-
-		<label>Photo 4:</label>
-		<input type="file" name="photo4" />
+				<label>Photo 4:</label>
+				<input type="file" name="photo4" />
+			</div>
+		</div>
 	</fieldset>
 	
-		<div class="form-actions">
-			<button type="submit" class="btn btn-primary" >Register</button>
-			<button type="button" class="btn" id="cancelButton" >Cancel</button>
+	<fieldset>
+		<legend>Price</legend>
+		
+		<div class="row">
+			<div class="span6">
+				<div class="input-prepend input-append">
+				
+					<label>Price:</label>
+					
+					<span class="add-on">R</span>
+					
+					<input id="price" type="text" name="vehicle[price][value]" />
+					
+					<span class="add-on">.00</span>
+				</div>
+			</div>
+			
+			<br />
+
+			<div class="span6">
+				<span>Negotiable:</span>
+				
+				<span class="btn-group" data-toggle="buttons-radio">
+					<button type="button" class="btn btn-small"
+							onclick="$('#negotiable').val('Yes');">Yes</button>
+					<button type="button" class="btn btn-small"
+							onclick="$('#negotiable').val('No');">No</button>
+				</span>
+				
+				<input type="hidden" id="negotiable" 
+						name="vehicle[price][negotiable]" />
+			</div>
 		</div>
+	</fieldset>
 	
+	<br />
+	
+	<label>Comments:</label>
+	
+	<textarea class="span5" cols="1" rows="3" id="comments" name="vehicle[comments]">
+	</textarea>
+	
+	<div class="form-actions">
+		<button type="submit" class="btn btn-primary" >Register</button>
+		<button type="button" class="btn" id="cancelButton" >Cancel</button>
+	</div>
 </form>
