--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,8 +3,8 @@
     <head>
 	<title>Boot and Bonnet</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
-	<link href="/assets/css/bootstrap-responsive.min.css" rel="stylesheet" />
+	<link href="/static/css/bootstrap.min.css" rel="stylesheet" />
+	<link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet" />
 	<style>
 	    body {
 		padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -55,7 +55,7 @@
 	    <%-body -%>
 	</div>
 	<%-scripts%>
-	<script src="/assets/js/jquery-1.9.1.min.js"></script>
-	<script src="/assets/js/bootstrap.min.js"></script>
+	<script src="/static/js/jquery-1.9.1.min.js"></script>
+	<script src="/static/js/bootstrap.min.js"></script>
     </body>
 </html>
